# autoclicker

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: main.cpp
src/common/: Action.h  AppState.h  AppUntils.h  Script.h  ScriptIO.cpp  ScriptIO.h
src/core/: Application.cpp  Application.h  AutoClicker.cpp  AutoClicker.h
src/platform/: IPlatform.h
src/platform/macos/: MacOSPlatform.cpp  MacOSPlatform.h
src/ui/: UI.cpp  UI.h
